Move python source files to separate folder

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -64,10 +64,10 @@
     "from pathlib import Path\n",
     "import numpy as np\n",
     "\n",
-    "import utils\n",
-    "from parcels_utils import xr_dataset_to_fieldset, HFRGrid\n",
-    "from constants import *\n",
-    "from gapfilling import InterpolationStep, SmoothnStep, Gapfiller"
+    "import src.utils as utils\n",
+    "from src.parcels_utils import xr_dataset_to_fieldset, HFRGrid\n",
+    "from src.constants import *\n",
+    "from src.gapfilling import InterpolationStep, SmoothnStep, Gapfiller"
    ]
   },
   {
@@ -132,7 +132,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "target_interped_xrds = gapfiller.execute(target)"
