--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -28,12 +28,12 @@
    "source": [
     "import os\n",
     "\n",
-    "import utils\n",
-    "from parcels_utils import HFRGrid, read_netcdf_info, rename_dataset_vars\n",
-    "from parcels_sim import ParcelsSimulation\n",
-    "from parcels_analysis import add_feature_set_to_result\n",
-    "from plot_features import BuoyPathFeature\n",
-    "from gapfilling import Gapfiller"
+    "import src.utils as utils\n",
+    "from src.parcels_utils import HFRGrid, read_netcdf_info, rename_dataset_vars\n",
+    "from src.parcels_sim import ParcelsSimulation\n",
+    "from src.parcels_analysis import add_feature_set_to_result\n",
+    "from src.plot_features import BuoyPathFeature\n",
+    "from src.gapfilling import Gapfiller"
    ]
   },
   {
