--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -31,9 +31,9 @@
     "import numpy as np\n",
     "import xarray as xr\n",
     "\n",
-    "import utils\n",
-    "from thredds_utils import ThreddsCode, get_thredds_dataset\n",
-    "from parcels_utils import xr_dataset_to_fieldset"
+    "import src.utils as utils\n",
+    "from src.thredds_utils import ThreddsCode, get_thredds_dataset\n",
+    "from src.parcels_utils import xr_dataset_to_fieldset"
    ]
   },
   {
@@ -131,8 +131,8 @@
     "]\n",
     "\n",
     "\n",
-    "for rd in get_regs_year(2020, \"tj_plume\", (32.11093, 32.73124), (-117.565, -116.9924)):\n",
-    "    region_data.append(rd)"
+    "# for rd in get_regs_year(2020, \"tj_plume\", (32.11093, 32.73124), (-117.565, -116.9924)):\n",
+    "#     region_data.append(rd)"
    ]
   },
   {
