--- a/fieldset_compare.ipynb
+++ b/fieldset_compare.ipynb
@@ -39,9 +39,9 @@
     "from parcels import FieldSet, ParticleSet, JITParticle, AdvectionRK4, ErrorCode, ParticleFile\n",
     "import scipy.spatial\n",
     "\n",
-    "import utils\n",
-    "from parcels_utils import get_file_info\n",
-    "from plot_utils import get_carree_axis, get_carree_gl"
+    "import src.utils as utils\n",
+    "from src.parcels_utils import get_file_info\n",
+    "from src.plot_utils import get_carree_axis, get_carree_gl"
    ]
   },
   {
