--- a/slice_coastline_data.ipynb
+++ b/slice_coastline_data.ipynb
@@ -22,9 +22,9 @@
     "import scipy.io\n",
     "import xarray as xr\n",
     "\n",
-    "import plot_utils\n",
-    "import utils\n",
-    "from constants import *"
+    "import src.plot_utils as plot_utils\n",
+    "import src.utils as utils\n",
+    "from src.constants import *"
    ]
   },
   {
