Add coastline loading notebook

--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -109,13 +109,21 @@
     "# tuple reference\n",
     "# (name, region code, time range, lat range, lon range, include domain endpoints)\n",
     "region_data = [\n",
+    "#     {\n",
+    "#         \"name\": \"tj_sample\",\n",
+    "#         \"code\": ThreddsCode.USWC_1KM_HOURLY,\n",
+    "#         \"time_range\": (\"2019-01-01T00\", \"2021-01-01T00\", 300),\n",
+    "#         \"lat_range\": (32.11093, 32.73124),\n",
+    "#         \"lon_range\": (-117.565, -116.9924),\n",
+    "#         \"include_range_endpoints\": False\n",
+    "#     },\n",
     "    {\n",
-    "        \"name\": \"tj_sample\",\n",
-    "        \"code\": ThreddsCode.USWC_1KM_HOURLY,\n",
-    "        \"time_range\": (\"2019-01-01T00\", \"2021-01-01T00\", 300),\n",
-    "        \"lat_range\": (32.11093, 32.73124),\n",
-    "        \"lon_range\": (-117.565, -116.9924),\n",
-    "        \"include_range_endpoints\": False\n",
+    "        \"name\": \"hunington_latest\",\n",
+    "        \"code\": ThreddsCode.USWC_6KM_HOURLY,\n",
+    "        \"time_range\": (\"2021-10-01T00\", \"2021-10-10T00\"),\n",
+    "        \"lat_range\": (32, 34.2),\n",
+    "        \"lon_range\": (-119, -117.4),\n",
+    "        \"include_range_endpoints\": True\n",
     "    },\n",
     "#     (\"tj_plume\", ThreddsCode.USWC_1KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
     "#     (\"tj_plume\", ThreddsCode.USWC_2KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
