Half working coastline field loaded in
Nonzero alongshore currents are never interpolated

--- a/load_coastline_into_field.ipynb
+++ b/load_coastline_into_field.ipynb
@@ -4,12 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "83565b02",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-10-21T23:28:40.056687Z",
-     "start_time": "2021-10-21T23:28:37.378921Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
@@ -28,31 +23,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ac9915a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import src.thredds_utils as thredds_utils\n",
+    "\n",
+    "ds = xr.open_dataset(thredds_utils.thredds_urls[thredds_utils.ThreddsCode.USWC_1KM_HOURLY])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "68127a86",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-10-21T23:28:40.062317Z",
-     "start_time": "2021-10-21T23:28:40.059182Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "velocity_field_nc = utils.CURRENT_NETCDF_DIR / \"hunington_latest_ThreddsCode.USWC_6KM_HOURLY.nc\"\n",
     "coastline_mat = utils.MATLAB_DIR / \"socal_boundary.mat\"\n",
-    "lat_diff = None\n",
-    "lon_diff = None"
+    "# 1 km resolution values\n",
+    "lat_diff = 0.00898933 * 2\n",
+    "lon_diff = 0.01042175 * 2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "6c34b86c",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-10-21T23:28:40.102970Z",
-     "start_time": "2021-10-21T23:28:40.064823Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "vel_ds = xr.open_dataset(velocity_field_nc)\n",
@@ -64,30 +62,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1ac01107",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-10-21T23:28:40.109624Z",
-     "start_time": "2021-10-21T23:28:40.105871Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "if lat_diff is None:\n",
-    "    lat_diff = abs(np.diff(lats).min()) / 2\n",
+    "    lat_diff = abs(np.diff(lats).min())\n",
     "if lon_diff is None:\n",
-    "    lon_diff = abs(np.diff(lons).min()) / 2"
+    "    lon_diff = abs(np.diff(lons).min())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a8f15389",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-10-21T23:28:40.115554Z",
-     "start_time": "2021-10-21T23:28:40.111507Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "lat_start = lats.min()\n",
@@ -100,12 +88,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a7689d0a",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-10-21T23:28:40.120116Z",
-     "start_time": "2021-10-21T23:28:40.117420Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "lat_steps = math.ceil((lat_end - lat_start) / lat_diff) + 1\n",
@@ -116,12 +99,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3e8d7ad9",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-10-21T23:28:40.124433Z",
-     "start_time": "2021-10-21T23:28:40.121455Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "lats_grid = lat_start + np.arange(lat_steps) * lat_diff\n",
@@ -132,12 +110,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7959f817",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-10-21T23:28:40.151452Z",
-     "start_time": "2021-10-21T23:28:40.126247Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "grid = np.empty((len(lats_grid), len(lons_grid)), dtype=object)\n",
@@ -148,17 +121,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c7be7e83",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-10-21T23:29:01.677510Z",
-     "start_time": "2021-10-21T23:28:40.153117Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# I tried to do something like ray tracing, realized I couldn't be bothered to think about it\n",
     "# here, have this brute force approach instead\n",
     "# lol\n",
+    "# I assume the coordinates use an Arakawa A-grid\n",
     "for i in range(len(lats_grid)):\n",
     "    for j in range(len(lons_grid)):\n",
     "        latmin = lats_grid[i] - lat_diff / 2\n",
@@ -172,12 +141,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "faf8ced7",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-10-21T23:29:01.773517Z",
-     "start_time": "2021-10-21T23:29:01.681660Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(len(lats) - 1):\n",
@@ -196,29 +160,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23f527a2",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-10-21T23:29:02.007655Z",
-     "start_time": "2021-10-21T23:29:01.775466Z"
-    }
-   },
+   "id": "e9c9867b",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "plt.scatter(np.where(info != None)[1], np.where(info != None)[0], s=0.1)"
+    "plt.figure(figsize=(10, 10))\n",
+    "plt.scatter(np.where(info != None)[1], np.where(info != None)[0], s=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23f527a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "info_where = np.where(info != None)\n",
+    "plt.quiver(\n",
+    "    info_where[1],\n",
+    "    info_where[0],\n",
+    "    list(map(lambda x: x[0], info[info_where])),\n",
+    "    list(map(lambda x: x[1], info[info_where])),\n",
+    "    width=0.001,\n",
+    "    pivot='mid'\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "534db893",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-10-21T23:29:02.146119Z",
-     "start_time": "2021-10-21T23:29:02.009329Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.scatter(lons, lats, s=0.1)"
@@ -228,16 +202,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "24a0cc6f",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-10-21T23:29:21.190325Z",
-     "start_time": "2021-10-21T23:29:16.390375Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "coast_u = np.tile((np.zeros(grid.shape)), (len(vel_ds[\"time\"]), 1, 1))\n",
-    "coast_v = np.tile((np.zeros(grid.shape)), (len(vel_ds[\"time\"]), 1, 1))\n",
+    "coast_u = np.tile((np.full(grid.shape, np.nan)), (len(vel_ds[\"time\"]), 1, 1))\n",
+    "coast_v = np.tile((np.full(grid.shape, np.nan)), (len(vel_ds[\"time\"]), 1, 1))\n",
     "mgrid = np.meshgrid(vel_ds[\"lat\"], vel_ds[\"lon\"], indexing=\"ij\")"
    ]
   },
@@ -246,10 +215,6 @@
    "execution_count": null,
    "id": "7880a810",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-10-21T23:34:16.061903Z",
-     "start_time": "2021-10-21T23:32:14.330005Z"
-    },
     "scrolled": true
    },
    "outputs": [],
@@ -277,19 +242,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9742b587",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "othermgrid = np.meshgrid(lats_grid, lons_grid, indexing=\"ij\")\n",
+    "plt.quiver(\n",
+    "    othermgrid[1].flatten(),\n",
+    "    othermgrid[0].flatten(),\n",
+    "    coast_u[0].flatten(),\n",
+    "    coast_v[0].flatten(),\n",
+    "    scale=4\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e09a675c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "othermgrid[1][~np.isnan(coast_u[0])], othermgrid[0][~np.isnan(coast_u[0])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8f3659ac",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-10-21T23:37:57.965480Z",
-     "start_time": "2021-10-21T23:37:57.961177Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ds = xr.Dataset(\n",
     "    data_vars={\n",
-    "        \"u\": ([\"time\", \"lat\", \"lon\"], coast_u),\n",
-    "        \"v\": ([\"time\", \"lat\", \"lon\"], coast_v)\n",
+    "        \"U\": ([\"time\", \"lat\", \"lon\"], coast_u),\n",
+    "        \"V\": ([\"time\", \"lat\", \"lon\"], coast_v)\n",
     "    },\n",
     "    coords={\n",
     "        \"time\": vel_ds[\"time\"],\n",
@@ -303,16 +291,34 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3b63685e",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-10-21T23:41:44.253831Z",
-     "start_time": "2021-10-21T23:41:25.304566Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "from parcels import Field\n",
     "from src.parcels_utils import rename_dataset_vars, xr_dataset_to_fieldset\n",
-    "fs = xr_dataset_to_fieldset(rename_dataset_vars(ds))"
+    "\n",
+    "fu = Field.from_xarray(ds[\"U\"], \"CU\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"))\n",
+    "fv = Field.from_xarray(ds[\"V\"], \"CV\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d272f40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fu.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d65704ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds.to_netcdf(\"current_netcdfs/socal_alongshore.nc\")"
    ]
   }
  ],
