--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -51,6 +51,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import xarray as xr\n",
+    "from parcels import Field\n",
+    "coast_ds = xr.open_dataset(\"current_netcdfs/socal_alongshore.nc\")\n",
+    "\n",
+    "fu = Field.from_xarray(coast_ds[\"U\"], \"CU\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\")\n",
+    "fv = Field.from_xarray(coast_ds[\"V\"], \"CV\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "configs = [\n",
     "#     \"plume_track.json\",\n",
     "#     \"tijuana_now.json\",\n",
@@ -66,13 +80,15 @@
     "    ds = gapfiller.execute(HFRGrid(ds))\n",
     "    bound_cond = cfg[\"parcels_config\"].get(\"boundary\", None)\n",
     "    if bound_cond is None:\n",
-    "        grids.append(HFRGrid(ds))\n",
+    "        print(\":)\")\n",
+    "        grids.append(HFRGrid(ds, fields=[fu, fv]))\n",
+    "        print(grids[-1].fieldset.CU)\n",
     "    elif bound_cond.lower() in (\"free\", \"freeslip\"):\n",
     "        grids.append(HFRGrid(ds, fs_kwargs={\"interp_method\": {\"U\": \"freeslip\", \"V\": \"freeslip\"}}))\n",
     "    elif bound_cond.lower() in (\"partial\", \"partialslip\"):\n",
     "        grids.append(HFRGrid(ds, fs_kwargs={\"interp_method\": {\"U\": \"partialslip\", \"V\": \"partialslip\"}}))\n",
     "    else:\n",
-    "        grids.append(HFRGrid(ds))\n",
+    "        raise ValueError(f\"Invalid boundary condition {bound_cond}\")\n",
     "    wind_data = cfg[\"netcdf_path\"].get(\"wind_data\", None)\n",
     "    if wind_data is not None:\n",
     "        wind_ds = rename_dataset_vars(wind_data[\"path\"])\n",
@@ -92,6 +108,7 @@
    "source": [
     "sims = []\n",
     "for i, cfg in enumerate(loaded_configs):\n",
+    "    print(grids[i].fieldset.CU)\n",
     "    name = cfg.get(\"name\", os.path.splitext(os.path.basename(configs[i]))[0])\n",
     "    sim = ParcelsSimulation(name, grids[i], cfg[\"parcels_config\"])\n",
     "    sims.append(sim)"
