Dummy data alongshore fields is finally working properly

--- a/load_coastline_into_field.ipynb
+++ b/load_coastline_into_field.ipynb
@@ -17,7 +17,7 @@
     "from shapely.ops import nearest_points\n",
     "\n",
     "import src.utils as utils\n",
-    "from src.parcels_utils import xr_dataset_to_fieldset, HFRGrid"
+    "from src.parcels_utils import xr_dataset_to_fieldset, HFRGrid, rename_dataset_vars"
    ]
   },
   {
@@ -39,11 +39,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "velocity_field_nc = utils.CURRENT_NETCDF_DIR / \"hunington_latest_ThreddsCode.USWC_6KM_HOURLY.nc\"\n",
-    "coastline_mat = utils.MATLAB_DIR / \"socal_boundary.mat\"\n",
+    "velocity_field_nc = utils.CURRENT_NETCDF_DIR / \"dummy_field.nc\"\n",
+    "coastline_mat = utils.MATLAB_DIR / \"dummy_coast.mat\"\n",
+    "output_file = \"current_netcdfs/dummy_alongshore.nc\"\n",
     "# 1 km resolution values\n",
-    "lat_diff = 0.00898933 * 2\n",
-    "lon_diff = 0.01042175 * 2"
+    "lat_diff = 0.00898933\n",
+    "lon_diff = 0.01042175"
    ]
   },
   {
@@ -53,8 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vel_ds = xr.open_dataset(velocity_field_nc)\n",
-    "lats, lons = utils.load_pts_mat(coastline_mat, \"yb\", \"xb\")\n",
+    "vel_ds = rename_dataset_vars(xr.open_dataset(velocity_field_nc))\n",
+    "lats, lons = utils.load_pts_mat(coastline_mat)\n",
     "coastline = LineString(np.array([lats, lons]).T)"
    ]
   },
@@ -78,10 +79,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lat_start = lats.min()\n",
-    "lat_end = lats.max()\n",
-    "lon_start = lons.min()\n",
-    "lon_end = lons.max()"
+    "lat_start = vel_ds[\"lat\"].values.min()\n",
+    "lat_end = vel_ds[\"lat\"].values.max()\n",
+    "lon_start = vel_ds[\"lon\"].values.min()\n",
+    "lon_end = vel_ds[\"lon\"].values.max()"
    ]
   },
   {
@@ -144,13 +145,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
     "for i in range(len(lats) - 1):\n",
     "    segment = LineString([[lats[i], lons[i]], [lats[i + 1], lons[i + 1]]])\n",
     "    vec = (lons[i + 1] - lons[i], lats[i + 1] - lats[i])\n",
     "    start_j = int((lats[i] - lats_grid[0]) // lat_diff)\n",
-    "    end_j = int((lats[i + 1] - lats_grid[0]) // lat_diff)\n",
+    "    end_j = math.ceil((lats[i + 1] - lats_grid[0]) / lat_diff)\n",
     "    start_k = int((lons[i] - lons_grid[0]) // lon_diff)\n",
-    "    end_k = int((lons[i + 1] - lons_grid[0]) // lon_diff)\n",
+    "    end_k = math.ceil((lons[i + 1] - lons_grid[0]) / lon_diff)\n",
     "    for j in range(min(start_j, end_j), max(start_j, end_j) + 1):\n",
     "        for k in range(min(start_k, end_k), max(start_k, end_k) + 1):\n",
     "            if info[j, k] is None and segment.intersects(grid[j, k]):\n",
@@ -167,6 +169,14 @@
     "import matplotlib.pyplot as plt\n",
     "plt.figure(figsize=(10, 10))\n",
     "plt.scatter(np.where(info != None)[1], np.where(info != None)[0], s=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51ac84d0",
+   "metadata": {},
+   "source": [
+    "### The vectors at each coastline grid point tangental to the coastline"
    ]
   },
   {
@@ -221,11 +231,13 @@
    "source": [
     "# this is gonna take a while to run\n",
     "for i in range(len(vel_ds[\"time\"])):\n",
-    "    nonzero = np.where(~np.isnan(vel_ds[\"u\"])[i])\n",
+    "    nonzero = np.where(~np.isnan(vel_ds[\"U\"])[i])\n",
+    "    if len(nonzero[0]) == 0:\n",
+    "        continue\n",
     "    positions = np.array([mgrid[0][nonzero], mgrid[1][nonzero]]).T\n",
     "    kdtree = scipy.spatial.KDTree(positions)\n",
-    "    u = vel_ds[\"u\"][i].values\n",
-    "    v = vel_ds[\"v\"][i].values\n",
+    "    u = vel_ds[\"U\"][i].values\n",
+    "    v = vel_ds[\"V\"][i].values\n",
     "    for j in range(grid.shape[0]):\n",
     "        for k in range(grid.shape[1]):\n",
     "            if info[j, k] is not None:\n",
@@ -240,31 +252,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e23588c",
+   "metadata": {},
+   "source": [
+    "### The alongshore current calculated along each coast grid point"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9742b587",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(20, 20))\n",
+    "from src.plot_utils import get_carree_axis, get_carree_gl\n",
+    "\n",
     "othermgrid = np.meshgrid(lats_grid, lons_grid, indexing=\"ij\")\n",
+    "plt.figure(figsize=(20, 20))\n",
     "plt.quiver(\n",
     "    othermgrid[1].flatten(),\n",
     "    othermgrid[0].flatten(),\n",
     "    coast_u[0].flatten(),\n",
-    "    coast_v[0].flatten(),\n",
-    "    scale=4\n",
+    "    coast_v[0].flatten()\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e09a675c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "othermgrid[1][~np.isnan(coast_u[0])], othermgrid[0][~np.isnan(coast_u[0])]"
    ]
   },
   {
@@ -297,18 +308,8 @@
     "from parcels import Field\n",
     "from src.parcels_utils import rename_dataset_vars, xr_dataset_to_fieldset\n",
     "\n",
-    "fu = Field.from_xarray(ds[\"U\"], \"CU\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"))\n",
-    "fv = Field.from_xarray(ds[\"V\"], \"CV\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d272f40",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fu.show()"
+    "fu = Field.from_xarray(ds[\"U\"], \"CU\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), mesh=\"spherical\", interp_method=\"nearest\")\n",
+    "fv = Field.from_xarray(ds[\"V\"], \"CV\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), mesh=\"spherical\", interp_method=\"nearest\")"
    ]
   },
   {
@@ -318,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds.to_netcdf(\"current_netcdfs/socal_alongshore.nc\")"
+    "ds.to_netcdf(output_file)"
    ]
   }
  ],
