--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -52,11 +52,15 @@
    "outputs": [],
    "source": [
     "import xarray as xr\n",
-    "from parcels import Field\n",
-    "coast_ds = xr.open_dataset(\"current_netcdfs/socal_alongshore.nc\")\n",
+    "from parcels import Field, VectorField\n",
+    "from parcels.tools.converters import GeographicPolar, Geographic\n",
+    "coast_ds = xr.open_dataset(\"current_netcdfs/dummy_alongshore.nc\")\n",
     "\n",
     "fu = Field.from_xarray(coast_ds[\"U\"], \"CU\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\")\n",
-    "fv = Field.from_xarray(coast_ds[\"V\"], \"CV\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\")"
+    "fu.units = GeographicPolar()\n",
+    "fv = Field.from_xarray(coast_ds[\"V\"], \"CV\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\")\n",
+    "fv.units = Geographic()\n",
+    "fuv = VectorField(\"CUV\", fu, fv)"
    ]
   },
   {
@@ -69,20 +73,21 @@
     "#     \"plume_track.json\",\n",
     "#     \"tijuana_now.json\",\n",
     "#     \"buoy_track_704_02.json\",\n",
-    "    \"hunington_all.json\",\n",
+    "#     \"hunington_all.json\",\n",
+    "    \"dummy_sim.json\",\n",
     "]\n",
     "\n",
     "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
     "grids = []\n",
     "for i, cfg in enumerate(loaded_configs):\n",
     "    ds = read_netcdf_info(cfg[\"netcdf_path\"])\n",
-    "    gapfiller = Gapfiller.load_from_config(*cfg[\"netcdf_path\"][\"gapfill_steps\"])\n",
+    "    gapfiller = Gapfiller.load_from_config(*cfg[\"netcdf_path\"].get(\"gapfill_steps\", []))\n",
     "    ds = gapfiller.execute(HFRGrid(ds))\n",
     "    bound_cond = cfg[\"parcels_config\"].get(\"boundary\", None)\n",
     "    if bound_cond is None:\n",
     "        print(\":)\")\n",
-    "        grids.append(HFRGrid(ds, fields=[fu, fv]))\n",
-    "        print(grids[-1].fieldset.CU)\n",
+    "        grids.append(HFRGrid(ds, fields=[fuv]))\n",
+    "#         grids.append(HFRGrid(ds))\n",
     "    elif bound_cond.lower() in (\"free\", \"freeslip\"):\n",
     "        grids.append(HFRGrid(ds, fs_kwargs={\"interp_method\": {\"U\": \"freeslip\", \"V\": \"freeslip\"}}))\n",
     "    elif bound_cond.lower() in (\"partial\", \"partialslip\"):\n",
@@ -108,7 +113,6 @@
    "source": [
     "sims = []\n",
     "for i, cfg in enumerate(loaded_configs):\n",
-    "    print(grids[i].fieldset.CU)\n",
     "    name = cfg.get(\"name\", os.path.splitext(os.path.basename(configs[i]))[0])\n",
     "    sim = ParcelsSimulation(name, grids[i], cfg[\"parcels_config\"])\n",
     "    sims.append(sim)"
@@ -134,7 +138,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
