Testing alongshore currents with huntington settings

--- a/load_coastline_into_field.ipynb
+++ b/load_coastline_into_field.ipynb
@@ -23,25 +23,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac9915a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import src.thredds_utils as thredds_utils\n",
-    "\n",
-    "ds = xr.open_dataset(thredds_utils.thredds_urls[thredds_utils.ThreddsCode.USWC_1KM_HOURLY])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "68127a86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "velocity_field_nc = utils.CURRENT_NETCDF_DIR / \"dummy_field.nc\"\n",
-    "coastline_mat = utils.MATLAB_DIR / \"dummy_coast.mat\"\n",
-    "output_file = \"current_netcdfs/dummy_alongshore.nc\"\n",
+    "velocity_field_nc = utils.CURRENT_NETCDF_DIR / \"hunington_latest_ThreddsCode.USWC_6KM_HOURLY.nc\"\n",
+    "coastline_mat = utils.MATLAB_DIR / \"socal_boundary.mat\"\n",
+    "output_file = \"current_netcdfs/socal_alongshore.nc\"\n",
     "# 1 km resolution values\n",
     "lat_diff = 0.00898933\n",
     "lon_diff = 0.01042175"
@@ -79,10 +67,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lat_start = vel_ds[\"lat\"].values.min()\n",
-    "lat_end = vel_ds[\"lat\"].values.max()\n",
-    "lon_start = vel_ds[\"lon\"].values.min()\n",
-    "lon_end = vel_ds[\"lon\"].values.max()"
+    "lat_start = min(lats.min(), vel_ds[\"lat\"].values.min())\n",
+    "lat_end = max(lats.max(), vel_ds[\"lat\"].values.max())\n",
+    "lon_start = min(lons.min(), vel_ds[\"lon\"].values.min())\n",
+    "lon_end = max(lons.max(), vel_ds[\"lon\"].values.max())"
    ]
   },
   {
@@ -162,6 +150,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "48a4bea2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e9c9867b",
    "metadata": {},
    "outputs": [],
@@ -202,7 +200,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "534db893",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "plt.scatter(lons, lats, s=0.1)"
@@ -256,7 +256,9 @@
    "id": "6e23588c",
    "metadata": {},
    "source": [
-    "### The alongshore current calculated along each coast grid point"
+    "### The alongshore current calculated along each coast grid point\n",
+    "\n",
+    "This is for a single timestamp"
    ]
   },
   {
@@ -305,11 +307,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from parcels import Field\n",
+    "from parcels import Field, VectorField\n",
+    "from parcels.tools.converters import GeographicPolar, Geographic\n",
     "from src.parcels_utils import rename_dataset_vars, xr_dataset_to_fieldset\n",
     "\n",
-    "fu = Field.from_xarray(ds[\"U\"], \"CU\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), mesh=\"spherical\", interp_method=\"nearest\")\n",
-    "fv = Field.from_xarray(ds[\"V\"], \"CV\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), mesh=\"spherical\", interp_method=\"nearest\")"
+    "fu = Field.from_xarray(coast_ds[\"U\"], \"CU\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\")\n",
+    "fu.units = GeographicPolar()\n",
+    "fv = Field.from_xarray(coast_ds[\"V\"], \"CV\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\")\n",
+    "fv.units = Geographic()\n",
+    "fuv = VectorField(\"CUV\", fu, fv)"
    ]
   },
   {
