--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -54,11 +54,11 @@
     "import xarray as xr\n",
     "from parcels import Field, VectorField\n",
     "from parcels.tools.converters import GeographicPolar, Geographic\n",
-    "coast_ds = xr.open_dataset(\"current_netcdfs/dummy_alongshore.nc\")\n",
+    "coast_ds = xr.open_dataset(\"current_netcdfs/socal_alongshore.nc\")\n",
     "\n",
-    "fu = Field.from_xarray(coast_ds[\"U\"], \"CU\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\")\n",
+    "fu = Field.from_xarray(coast_ds[\"U\"], \"CU\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"linear\")\n",
     "fu.units = GeographicPolar()\n",
-    "fv = Field.from_xarray(coast_ds[\"V\"], \"CV\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\")\n",
+    "fv = Field.from_xarray(coast_ds[\"V\"], \"CV\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"linear\")\n",
     "fv.units = Geographic()\n",
     "fuv = VectorField(\"CUV\", fu, fv)"
    ]
@@ -73,8 +73,8 @@
     "#     \"plume_track.json\",\n",
     "#     \"tijuana_now.json\",\n",
     "#     \"buoy_track_704_02.json\",\n",
-    "#     \"hunington_all.json\",\n",
-    "    \"dummy_sim.json\",\n",
+    "    \"hunington_all.json\",\n",
+    "#     \"dummy_sim.json\",\n",
     "]\n",
     "\n",
     "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
