Minor fixes to coastline loading notebook

--- a/load_coastline_into_field.ipynb
+++ b/load_coastline_into_field.ipynb
@@ -150,16 +150,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48a4bea2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "info.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e9c9867b",
    "metadata": {},
    "outputs": [],
@@ -265,7 +255,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9742b587",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "from src.plot_utils import get_carree_axis, get_carree_gl\n",
@@ -276,7 +268,8 @@
     "    othermgrid[1].flatten(),\n",
     "    othermgrid[0].flatten(),\n",
     "    coast_u[0].flatten(),\n",
-    "    coast_v[0].flatten()\n",
+    "    coast_v[0].flatten(),\n",
+    "    scale=5\n",
     ")"
    ]
   },
@@ -311,9 +304,9 @@
     "from parcels.tools.converters import GeographicPolar, Geographic\n",
     "from src.parcels_utils import rename_dataset_vars, xr_dataset_to_fieldset\n",
     "\n",
-    "fu = Field.from_xarray(coast_ds[\"U\"], \"CU\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\")\n",
+    "fu = Field.from_xarray(ds[\"U\"], \"CU\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\")\n",
     "fu.units = GeographicPolar()\n",
-    "fv = Field.from_xarray(coast_ds[\"V\"], \"CV\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\")\n",
+    "fv = Field.from_xarray(ds[\"V\"], \"CV\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\")\n",
     "fv.units = Geographic()\n",
     "fuv = VectorField(\"CUV\", fu, fv)"
    ]
