--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -70,17 +70,17 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "#     \"plume_track.json\",\n",
+    "    \"plume_track.json\",\n",
     "#     \"tijuana_now.json\",\n",
     "#     \"buoy_track_704_02.json\",\n",
-    "    \"hunington_all.json\",\n",
+    "#     \"hunington_all.json\",\n",
     "#     \"dummy_sim.json\",\n",
     "]\n",
     "\n",
     "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
     "grids = []\n",
     "for i, cfg in enumerate(loaded_configs):\n",
-    "    ds = read_netcdf_info(cfg[\"netcdf_path\"])\n",
+    "    ds = read_netcdf_info(**cfg[\"netcdf_path\"])\n",
     "    gapfiller = Gapfiller.load_from_config(*cfg[\"netcdf_path\"].get(\"gapfill_steps\", []))\n",
     "    ds = gapfiller.execute(HFRGrid(ds))\n",
     "    bound_cond = cfg[\"parcels_config\"].get(\"boundary\", None)\n",
@@ -188,27 +188,26 @@
    "source": [
     "import numpy as np\n",
     "\n",
+    "empty = (None, {}, \"\", [])\n",
+    "\n",
     "def handle_postprocessing(result, postprocess_cfg):\n",
-    "    if \"coastline\" in postprocess_cfg and postprocess_cfg[\"coastline\"] not in empty:\n",
-    "        if postprocess_cfg[\"coastline\"][\"path\"] not in (None, \"\"):\n",
-    "            # coastline stuff, use to delete particles that collide with a coastline\n",
-    "            lats, lons = utils.load_geo_points(**postprocess_cfg[\"coastline\"])\n",
-    "            result.add_coastline(lats, lons)\n",
-    "            result.process_coastline_collisions()\n",
-    "            print(\"processed collisions\")\n",
-    "    if \"buoy\" in postprocess_cfg and postprocess_cfg[\"buoy\"] not in empty:\n",
-    "        if postprocess_cfg[\"buoy\"][\"path\"] not in (None, \"\"):\n",
-    "            result.add_plot_feature(\n",
-    "                BuoyPathFeature.from_csv(\n",
-    "                    postprocess_cfg[\"buoy\"][\"path\"], backstep_delta=np.timedelta64(1, \"h\"),\n",
-    "                    backstep_count=12\n",
-    "                ), \"buoy\"\n",
-    "            )\n",
-    "            result.write_feature_dists([\"buoy\"])\n",
-    "            print(\"processed buoy distances\")\n",
+    "    if postprocess_cfg.get(\"coastline\", None) not in empty:\n",
+    "        lats, lons = utils.load_geo_points(**utils.get_path_cfg(postprocess_cfg[\"coastline\"]))\n",
+    "        result.add_coastline(lats, lons)\n",
+    "        result.process_coastline_collisions()\n",
+    "        print(\"processed collisions\")\n",
+    "    if postprocess_cfg.get(\"buoy\", None) not in empty:\n",
+    "        result.add_plot_feature(\n",
+    "            BuoyPathFeature.from_csv(\n",
+    "                postprocess_cfg[\"buoy\"],\n",
+    "                backstep_delta=np.timedelta64(1, \"h\"),\n",
+    "                backstep_count=12\n",
+    "            ), \"buoy\"\n",
+    "        )\n",
+    "        result.write_feature_dists([\"buoy\"])\n",
+    "        print(\"processed buoy distances\")\n",
     "    result.write_data(override=True)\n",
     "\n",
-    "empty = (None, {}, \"\", [])\n",
     "for i, sim in enumerate(sims):\n",
     "    cfg = loaded_configs[i]\n",
     "    postprocess_cfg = cfg[\"postprocess_config\"]\n",
@@ -216,7 +215,7 @@
     "    sim.parcels_result.write_data(override=True)\n",
     "    if cfg[\"save_snapshots\"]:\n",
     "        plotting_cfg = cfg[\"plotting_config\"]\n",
-    "        if \"plot_feature_set\" in plotting_cfg and plotting_cfg[\"plot_feature_set\"] not in (None, \"\"):\n",
+    "        if plotting_cfg.get(\"plot_feature_set\", None) not in empty:\n",
     "            add_feature_set_to_result(sim.parcels_result, plotting_cfg[\"plot_feature_set\"])\n",
     "        sim.parcels_result.generate_all_plots(\n",
     "            os.path.join(plotting_cfg[\"save_dir_snapshots\"], sim.name),\n",
