--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -70,9 +70,9 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "    \"plume_track.json\",\n",
-    "#     \"tijuana_now.json\",\n",
-    "#     \"buoy_track_704_02.json\",\n",
+    "#     \"plume_track.json\",\n",
+    "    \"tijuana_now.json\",\n",
+    "    \"buoy_track_704_02.json\",\n",
     "#     \"hunington_all.json\",\n",
     "#     \"dummy_sim.json\",\n",
     "]\n",
