Alongshore currents in config

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -26,14 +26,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import os\n",
+    "\n",
+    "from parcels import Field, VectorField\n",
+    "from parcels.tools.converters import GeographicPolar, Geographic\n",
+    "import xarray as xr\n",
     "\n",
     "import src.utils as utils\n",
     "from src.parcels_utils import HFRGrid, read_netcdf_info, rename_dataset_vars\n",
     "from src.parcels_sim import ParcelsSimulation\n",
     "from src.parcels_analysis import add_feature_set_to_result\n",
     "from src.plot_features import BuoyPathFeature\n",
-    "from src.gapfilling import Gapfiller"
+    "from src.gapfilling import Gapfiller\n",
+    "\n",
+    "empty = (None, {}, \"\", [])"
    ]
   },
   {
@@ -51,51 +58,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import xarray as xr\n",
-    "from parcels import Field, VectorField\n",
-    "from parcels.tools.converters import GeographicPolar, Geographic\n",
-    "coast_ds = xr.open_dataset(\"current_netcdfs/socal_alongshore.nc\")\n",
-    "\n",
-    "fu = Field.from_xarray(coast_ds[\"U\"], \"CU\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"linear\")\n",
-    "fu.units = GeographicPolar()\n",
-    "fv = Field.from_xarray(coast_ds[\"V\"], \"CV\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"linear\")\n",
-    "fv.units = Geographic()\n",
-    "fuv = VectorField(\"CUV\", fu, fv)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "configs = [\n",
     "#     \"plume_track.json\",\n",
-    "    \"tijuana_now.json\",\n",
-    "    \"buoy_track_704_02.json\",\n",
-    "#     \"hunington_all.json\",\n",
+    "#     \"tijuana_now.json\",\n",
+    "#     \"buoy_track_704_02.json\",\n",
+    "    \"hunington_all.json\",\n",
     "#     \"dummy_sim.json\",\n",
     "]\n",
     "\n",
     "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
     "grids = []\n",
     "for i, cfg in enumerate(loaded_configs):\n",
-    "    ds = read_netcdf_info(**cfg[\"netcdf_path\"])\n",
-    "    gapfiller = Gapfiller.load_from_config(*cfg[\"netcdf_path\"].get(\"gapfill_steps\", []))\n",
+    "    ocean_cfg = utils.get_path_cfg(cfg[\"netcdf_data\"][\"ocean\"])  # ocean is required, no check\n",
+    "    ds = read_netcdf_info(ocean_cfg)\n",
+    "    gapfiller = Gapfiller.load_from_config(*ocean_cfg.get(\"gapfill_steps\", []))\n",
     "    ds = gapfiller.execute(HFRGrid(ds))\n",
     "    bound_cond = cfg[\"parcels_config\"].get(\"boundary\", None)\n",
+    "    fields=[]\n",
+    "    if cfg[\"netcdf_data\"].get(\"alongshore\", None) not in empty:\n",
+    "        coast_ds = read_netcdf_info(cfg[\"netcdf_data\"][\"alongshore\"])\n",
+    "        fu = Field.from_xarray(\n",
+    "            coast_ds[\"U\"], \"CU\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\"\n",
+    "        )\n",
+    "        fu.units = GeographicPolar()\n",
+    "        fv = Field.from_xarray(\n",
+    "            coast_ds[\"V\"], \"CV\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\"\n",
+    "        )\n",
+    "        fv.units = Geographic()\n",
+    "        fuv = VectorField(\"CUV\", fu, fv)\n",
+    "        fields = [fuv]\n",
     "    if bound_cond is None:\n",
     "        print(\":)\")\n",
-    "        grids.append(HFRGrid(ds, fields=[fuv]))\n",
-    "#         grids.append(HFRGrid(ds))\n",
+    "        grids.append(HFRGrid(ds, fields=fields))\n",
     "    elif bound_cond.lower() in (\"free\", \"freeslip\"):\n",
-    "        grids.append(HFRGrid(ds, fs_kwargs={\"interp_method\": {\"U\": \"freeslip\", \"V\": \"freeslip\"}}))\n",
+    "        grids.append(HFRGrid(\n",
+    "            ds, fields=fields, fs_kwargs={\"interp_method\": {\"U\": \"freeslip\", \"V\": \"freeslip\"}}\n",
+    "        ))\n",
     "    elif bound_cond.lower() in (\"partial\", \"partialslip\"):\n",
-    "        grids.append(HFRGrid(ds, fs_kwargs={\"interp_method\": {\"U\": \"partialslip\", \"V\": \"partialslip\"}}))\n",
+    "        grids.append(HFRGrid(\n",
+    "            ds, fields=fields, fs_kwargs={\"interp_method\": {\"U\": \"partialslip\", \"V\": \"partialslip\"}}\n",
+    "        ))\n",
     "    else:\n",
     "        raise ValueError(f\"Invalid boundary condition {bound_cond}\")\n",
-    "    wind_data = cfg[\"netcdf_path\"].get(\"wind_data\", None)\n",
-    "    if wind_data is not None:\n",
+    "    wind_data = cfg[\"netcdf_data\"].get(\"wind\", None)\n",
+    "    if wind_data not in empty:\n",
     "        wind_ds = rename_dataset_vars(wind_data[\"path\"])\n",
     "        if wind_data[\"add_to_field_directly\"]:\n",
     "            grids[i].modify_with_wind(wind_ds, ratio=wind_data[\"ratio\"])\n",
@@ -186,10 +192,6 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "empty = (None, {}, \"\", [])\n",
-    "\n",
     "def handle_postprocessing(result, postprocess_cfg):\n",
     "    if postprocess_cfg.get(\"coastline\", None) not in empty:\n",
     "        lats, lons = utils.load_geo_points(**utils.get_path_cfg(postprocess_cfg[\"coastline\"]))\n",
