Fix nearcoast histograms

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -59,10 +59,10 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "#     \"plume_track.json\",\n",
+    "    \"plume_track.json\",\n",
     "#     \"tijuana_now.json\",\n",
     "#     \"buoy_track_704_02.json\",\n",
-    "    \"hunington_all.json\",\n",
+    "#     \"hunington_all.json\",\n",
     "#     \"dummy_sim.json\",\n",
     "]\n",
     "\n",
@@ -129,15 +129,6 @@
    "metadata": {},
    "source": [
     "## Animated gif stuff and particle simulation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ParticleSet and spawn point setup\n",
-    "\n",
-    "note about interpolation methods: only `linear` works if you want to use the FieldSet in a ParticleSet."
    ]
   },
   {
