Ignore magick if not installed

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -59,8 +59,8 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "    \"plume_track.json\",\n",
-    "#     \"tijuana_now.json\",\n",
+    "    # \"plume_track.json\",\n",
+    "    \"tijuana_now.json\",\n",
     "#     \"buoy_track_704_02.json\",\n",
     "#     \"hunington_all.json\",\n",
     "#     \"dummy_sim.json\",\n",
@@ -217,18 +217,21 @@
     "            figsize=(13, 8)\n",
     "        )\n",
     "        # comment out the generate_gif line if it doesn't work\n",
-    "        print(sim.parcels_result.generate_gif(os.path.join(plotting_cfg[\"save_dir_snapshots\"], f\"{sim.name}.gif\")))"
+    "        try:\n",
+    "            print(sim.parcels_result.generate_gif(os.path.join(plotting_cfg[\"save_dir_snapshots\"], f\"{sim.name}.gif\")))\n",
+    "        except FileNotFoundError:\n",
+    "            print(\"magick is not installed, gif will not be generated\")"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "f2b639208b218da688d617c97dbb97f29e52ab8204d2c4d4c192e2d843ea0177"
+   "hash": "0eba6c4b74a2f8ee4f11000f0a8df2ef42b87fd4ae75b12d527f1b8c08aad6c6"
   },
   "kernelspec": {
    "display_name": "py3-parcels",
    "language": "python",
-   "name": "py3-parcels"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
